# hypo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  roadmap.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.trae/documents/: hypo-todo-planning.md
.trae/specs/create-project-spec/: checklist.md  spec.md  tasks.md
docs/: SPEC.md  TODO.md
hypo-directory/: .gitignore  CONTRIBUTING.md  README.md  registry.json
hypo-directory/.github/workflows/: validate.yml
hypo-directory/a/: _template.json
hypo-directory/scripts/: sign-registry.sh
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  paths.rs  prg_bar.rs
src/commands/: config_cmd.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  registry.rs  uninstall.rs
src/crypto/: github.rs  keyring.rs  mod.rs  verify.rs
src/db/: mod.rs  operations.rs  schema.rs
src/executor/: executor_trait.rs  mod.rs  powershell.rs
src/package/: hash.rs  manifest.rs  mod.rs  reader.rs
src/registry/: cache.rs  client.rs  mod.rs  trust.rs  types.rs
src/sandbox/: mod.rs  sandbox_trait.rs
tests/: integration_test.rs
tools/smoke-test/: generate.rs  hypo-index.json  test-key-fingerprint.txt
tools/smoke-test/keyring/: 02EF4CA98DF02023FF85A88C781EBF90096F143D.asc  0665A3365037D24333415337F0EC5072064FD521.asc  34B42326D6850A6A0268384A28BA711D2B82C8F8.asc  63CF656593D81C1702812F6776473EA3FBC460AC.asc
tools/smoke-test/registry/: registry.json  registry.sig
tools/smoke-test/registry/t/: test-owner.json
tools/smoke-test/smoke-test/0.1.0/: hypo-package.json  manifest.toml  manifest.toml.sig
(+2 files in other folders)
